--- a/index.html
+++ b/index.html
@@ -6,30 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="img/images.png" type="image/x-icon">
+    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Mates-Gimenez-Desafio</title>
 </head>
 <body>
     <!--Será una web sobre mates,con imagenes, producto, tips de usos y cuidados -->
 <header>
-            <!--logo provisorio, todavía no tengo el definitivo-->
-            <img src="img/logo1..png" class="logo-mate">
-    <nav>
-        <ul class="lista-navegacion">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="pages/producto.html">Producto</a></li>
-            <li><a href="pages/servicios.html">Servicios</a></li>
-            <li><a href="pages/recomendaciones.html">Recomendaciones</a></li>
-            <li><a href="pages/contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+            <img src="img/conunmate.svg" class="logo-mate">
+
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="lista-navegacion">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="pages/producto.html">Productos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="pages/servicios.html">Servicios</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="pages/recomendaciones.html">Recomendaciones</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
 </header>
 
 <section class="grid-inicio">
     
     <h1 class="texto-inicial">Todo es mejor acompañado de un buen mate</h1>
 
-    <img class="producto-carrousel" src="img/banner.mate.jpeg"> <!--la idea es colocar un carrousel,no una imagen-->
+    <img class="producto-carrousel" src="img/banner.mate.jpeg"> 
    
 
         <div class= "card" class="comboMatero">
@@ -99,10 +114,13 @@
 
 
 
-
+<!--link animaciones-->
 <script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.min.js"></script>
 <script>
    new WOW().init();
 </script>
+
+<!--link bootstrap-->
+<script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
