--- a/pages/recomendaciones.html
+++ b/pages/recomendaciones.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../img/images.png" type="image/x-icon">
+    <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Mates-Gimenez-Desafio</title>
 </head>
@@ -13,18 +15,31 @@
 <section class="container-grid">
     
     <header>
-        <!--logo provisorio, todavía no tengo el definitivo-->
-        <img src="../img/logo1..png" class="logo-mate">
+        <img src="../img/conunmate.svg" class="logo-mate">
    
-    <nav>
-        <ul class="lista-navegacion">
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="producto.html">Producto</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="recomendaciones.html">Recomendaciones</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="lista-navegacion">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="producto.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="servicios.html">Servicios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="recomendaciones.html">Recomendaciones</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
 
     </header>
 
@@ -87,6 +102,21 @@
 
 </section>
 
+
+
+
+
+
+
+
+<!--link animaciones-->
+<script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.min.js"></script>
+<script>
+   new WOW().init();
+</script>
+
+<!--link bootstrap-->
+<script src="../bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 
 
 </body>
