modifico nav en index

--- a/index.html
+++ b/index.html
@@ -13,9 +13,50 @@
 <body>
     <!--Será una web sobre mates,con imagenes, producto, tips de usos y cuidados -->
 <header>
-            <img src="img/conunmate.svg" class="logo-mate">
+                <nav class="navbar navbar-light bg-light fixed-top">
+                <div class="container-fluid">
+                  <img src="img/conunmate.svg" class="logo-mate">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                      <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Con un mate</h5>
+                      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                      <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="pages/producto.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/recomendaciones.html">Recomendaciones</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                        </li>
+                      </ul>
+                      <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </nav>
 
-            <nav class="navbar navbar-expand-lg navbar-light">
+
+
+
+
+
+        <!--    <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
                     <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="lista-navegacion">
@@ -37,7 +78,7 @@
                     </ul>
                   </div>
                 </div>
-              </nav>
+              </nav>-->
 </header>
 
 <section class="grid-inicio">
