--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,7 +15,12 @@
 <header>
     <img src="../img/conunmate.svg" class="logo-mate">
 
-    <nav class="navbar navbar-expand-lg navbar-light">
+
+
+
+    
+
+    <!--<nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="lista-navegacion">
@@ -37,8 +42,9 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </nav>-->
 </header>
+
 
 <section>
     <h1>Contacto</h1>
