--- a/pages/recomendaciones.html
+++ b/pages/recomendaciones.html
@@ -15,31 +15,43 @@
 <section class="container-grid">
     
     <header>
-        <img src="../img/conunmate.svg" class="logo-mate">
-   
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="lista-navegacion">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="producto.html">Productos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="servicios.html">Servicios</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="recomendaciones.html">Recomendaciones</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                  </li>
-                </ul>
-              </div>
+      <nav class="navbar navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+          <img src="../img/conunmate.svg" class="logo-mate">
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Con un mate</h5>
+              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-          </nav>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="producto.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="servicios.html">Servicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="recomendaciones.html">Recomendaciones</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                </li>
+              </ul>
+              <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Buscar</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </nav>
 
     </header>
 
@@ -53,7 +65,7 @@
         </div>         
     </main>
     <article>
-        <h2  class="title">¿Cómo cebar tu mate?</h2>
+        <h2  class="title1">¿Cómo cebar tu mate?</h2>
 
         <div class="instructivo">
         <p>1- Primero debemos calentar el agua, teniendo en consideración que su temperatura no supere los 80°.</p>
@@ -65,7 +77,7 @@
         </div>
     </article>
     <div class="div">        
-        <h3  class="title">¿Cómo mantener tu mate en perfectas condiciones?</h3>
+        <h3  class="title1">¿Cómo mantener tu mate en perfectas condiciones?</h3>
         <div class="instructivo">
           <p>1- Apenas terminamos de tomar, debemos sacar toda la yerba y sus restos, comenzando con una cuchara.</p>
           <p>2-	Luego limpiaremos los sedimentos que hayan quedado con un papel de cocina humedecido.</p>
