cambios segunda entrega del proyecto final

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -13,6 +13,7 @@
 <body>
     <!--Será una web sobre mates,con imagenes, producto, tips de usos y cuidados -->
 <header>
+
   <nav class="navbar navbar-light bg-light fixed-top">
     <div class="container-fluid">
       <img src="../img/conunmate.svg" class="logo-mate">
@@ -53,7 +54,15 @@
 </header>
 
 <section>
-<h1>Página en proceso</h1>
+
+  <h1>Regalos Empresariales</h1>
+  
+    <img src="../img/Principal.jpg" class= empresariales alt="mates">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut sapiente distinctio a in vitae maiores voluptates, asperiores veniam vel sit ea tenetur possimus dolores soluta quaerat quis veritatis harum maxime!</p>
+    <img src="../img/empresarial.jpg" class= empresariales alt="regalo-empresarial">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut sapiente distinctio a in vitae maiores voluptates, asperiores veniam vel sit ea tenetur possimus dolores soluta quaerat quis veritatis harum maxime!</p>
+    <img src="../img/combo2.jpg" class= empresariales alt="combo2">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut sapiente distinctio a in vitae maiores voluptates, asperiores veniam vel sit ea tenetur possimus dolores soluta quaerat quis veritatis harum maxime!</p>
 </section>
 
 <footer class="card__footer">
